--- a/app/templates/company_base.html
+++ b/app/templates/company_base.html
@@ -2,7 +2,7 @@
 
 {% block title %}
 	{% if title %}
-	labApp - {{ title }}
+	labApp - {{company.company_name }}-{{ title }}
 	{% else %}
 	labApp
 	{% endif %}
