--- a/app/templates/inventory_management/inventory.html
+++ b/app/templates/inventory_management/inventory.html
@@ -48,7 +48,7 @@
 			</table>
 		</div>
 		{% for my_p in my_products %}
-		<div class="modal fade" id="request_reagent_modal_{{ my_p.ref_number }}" tabindex="-1" role="dialog">
+		<!--div class="modal fade" id="request_reagent_modal_{{ my_p.ref_number }}" tabindex="-1" role="dialog">
 		  <div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<form action method="post" class="form" role="form">
@@ -85,7 +85,7 @@
 				</form>
 			</div>
 		  </div>
-		</div>
+		</div-->
 		{% endfor %}
 	</div>
 {% endblock %}
