--- a/app/templates/inventory_management/suppliers.html
+++ b/app/templates/inventory_management/suppliers.html
@@ -21,11 +21,11 @@
 	</div>
     <div class="row">
 		<div class='col-md-12'>
-			<button type="button" class="btn btn-default" id="open_supplier_sidenav" aria-label="Left Align">
+			<button type="button" class="btn btn-default" id="open_supplier_sidenav" aria-label="Left Align" style="float: left;">
 				<span>Register Supplier</span>
 				<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
 			</button>
-		<table class="table table-bordered table-hover">
+		<table class="table table-bordered table-hover text-center">
 			<tr>
 				<th>Supplier</th>
 				<th>Email</th>
