--- a/app/templates/inventory_management/purchase_list.html
+++ b/app/templates/inventory_management/purchase_list.html
@@ -3,10 +3,10 @@
 
 {% block app_content %}
 {% include 'inventory_management/inventory_manager_nav.html' %}	
-    <h3 class="inventory_headers">Create Orders</h3>
-	<a class="create_orders no-print" href="{{ url_for('orders', company_name=company.company_name)}}">Manage Orders</a>
+    <h3 class="inventory_headers">Purchase List</h3>
+	<a class="create_orders no-print" href="{{ url_for('purchases', company_name=company.company_name)}}">Manage Purchases</a>
 	<hr class="inventory_hr">
-    <div class="row sidenav" id="create_orders_sidenav">
+	<div class="row sidenav" id="create_orders_sidenav">
 		<div class="col-md-12 registerContainer" id="create_orders_form_container">
 			<div>
 				<button type="button" class="btn btn-default hide_sidenav" aria-label="Left Align">
@@ -53,13 +53,13 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-		{% if not order.date_submitted %}
+		{% if not purchase.date_purchased %}
 		<button type="button" class="btn btn-default" id="open_orders_sidenav" aria-label="Left Align">
 			<span>Add items</span>
 			<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
 		</button>
 		{% endif %}
-		<span class="text-center"><h4>Order No: <span style="color: blue;">{{ order.order_no }}</span></h4> </span>
+		<span class="text-center"><h4>Purchase Order No: <span style="color: blue;">{{ purchase.purchase_order_no }}</span></h4> </span>
 			<table class="table table-bordered table-hover text-center" id="orders_list_table">
 				<tr>
 					<th>Reference No</th>
@@ -69,7 +69,7 @@
 					<th>Total Price</th>
 					<th>Added by</th>
 				</tr>
-				{% for list in order_list %}
+				{% for list in purchase_list %}
 					<tr>
 						<td>{{ list.ref_number }}</td>
 						<td>{{ list.name }}</td>
@@ -77,65 +77,31 @@
 						<td>{{ list.quantity }}</td>
 						<td class='individual_total'>{{ list.total }}</td>
 						<td>{{ list.user.username }}</td>
-						<!--td><a href="#" data-toggle="modal" id="request_{{ list.ref_number }}" data-target="#request_reagent_modal_{{ list.ref_number }}">Edit</a></td-->
-						
-						{% if not order.date_submitted %}
-						<td><a href="{{url_for('remove_order_item', company_name=company.company_name, order_no=order.order_no, id=list.id)}}"><span class="glyphicon glyphicon-trash" aria-hidden="true"></a></td>
+						<!--td><a href="#" data-toggle="modal" id="edit_{{ list.ref_number }}" data-target="#edit_purchase_list_modal_{{ list.ref_number }}">Edit</a></td-->
+						{% if not purchase.date_purchased %}
+						<td><a href="{{url_for('remove_purchase_item', company_name=company.company_name, purchase_order_no=purchase.purchase_order_no, id=list.id)}}"><span class="glyphicon glyphicon-trash" aria-hidden="true"></a></td>
 						{% endif %}
-					
+						
 					</tr>
 					
 				{% endfor %}
 			</table>
-		
-		<form action method="post" class="form" role="form" name="orders_list_form" id="orders_list_form">
+			<form action method="post" class="form" role="form" name="orders_list_form" id="orders_list_form">
 			{{ form.csrf_token() }}
 			<div style="width: 200px;float: right; margin-bottom: 20px;">
 				<div id="subtotal_container">Total: <span id="subtotal_price" style="color: blue;"></span></div>
-				{% if not order.date_submitted %}
+				{% if not purchase.date_purchased %}
 				<div>
 					{{ form.save(class_="btn btn-default")}}
-					{% if order_list %}
+					{% if purchase_list %}
 					{{ form.submit(class_="btn btn-default")}}
 					{% endif %}
 				</div>
 				{% endif %}
 			</div>
 		</form>
-		</div>
-		<!-- using modal for editing quantity not working
-		{% for list in order_list %}
-		<div class="modal fade" id="request_reagent_modal_{{ list.ref_number }}" tabindex="-1" role="dialog">
-		  <div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-				<h4 class="modal-title">Order no: {{ order.order_no }}</h4>
-				<button type="button" class="close" id="close_{{ list.ref_number }}" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				</div>
-				<div class="modal-body">
-					
-						<table id="edit_qty_table_{{ list.ref_number }}">
-							<tr>
-								<th style="width:150px;">Ref No</th>
-								<th style="width:400px;">Name</th>
-								<th style="width:40px;">Qty</th>
-							</tr>
-							<!--tr>
-								<td>{{ list.ref_number }}</td>
-								<td>{{ list.name }}</td>
-								<td id="quantity_edit_{{ list.ref_number }}" contenteditable>{{ list.quantity }}</td>
-							</tr>
-						</table>
-					
-				</div>
-				<div class="modal-footer">
-				
-				</div>
-			</div>
-		  </div>
-		</div>
-		{% endfor %}
-			-->
+		</div>	
+		
     </div>
 {% endblock %}
 {% block scripts %}
@@ -210,16 +176,18 @@
 		{% endfor %}
 		
 		{% for list in order_list %}
-		$("#request_{{ list.ref_number }}").click(function() {
+			$("#close_{{ list.ref_number }}").click(function() {
+				$(".append_data").remove();
+			});
+		
+		/*$("#request_{{ list.ref_number }}").click(function() {
 			
 			$("#edit_qty_table_{{ list.ref_number }} > tbody:last-child").append('<tr class="append_data"><form action method="post"class="form" role="form"><td>{{list.ref_number}}</td><td>{{list.name}}</td><td style="width:80px;">{{ form1.edit_qty(class_="form-control") }}</td><td><button type="button" class="btn btn-default" id="edit_item_qty"><a href="{{url_for("edit_item_qty", company_name=company.company_name, order_no=order.order_no, id=list.id)}}">Edit</a></button></td><td>{{ form1.orderlist_id(value=list.id)}}</td><td>{{ form1.csrf_token() }}</td></form></tr>');
 			print
 			/*$('input[name=orderlist_id]').val({{ list.id }});
-			$('input[name=edit_qty]').val({{ list.quantity }});*/
-		});
-		$("#close_{{ list.ref_number }}").click(function() {
-			$(".append_data").remove();
-		});
+			$('input[name=edit_qty]').val({{ list.quantity }});
+		});*/
+		
 		
 		/*$(document).on( 'keyup', '#edit_qty', function() {
 			var qty_val = $("#edit_qty").val();
