--- a/app/templates/inventory_management/products.html
+++ b/app/templates/inventory_management/products.html
@@ -98,6 +98,8 @@
 					<th>Product Name</th>
 					<th>Description</th>
 					<th>Storage</th>
+					<th>Min Qty</th>
+					<th>Min Expiry</th>
 					<th>Price</th>
 					<th>Department</th>
 					<th>Type</th>
@@ -110,6 +112,8 @@
 						<td>{{ my_p.name }}</td>
 						<td>{{ my_p.description }}</td>
 						<td>{{ my_p.storage_req }}</td>
+						<td>{{ my_p.min_quantity }}</td>
+						<td>{{ my_p.min_expiry }}</td>
 						<td>{{ my_p.price }}</td>
 						<td>{{ my_p.dept_name }}</td>
 						<td>{{ my_p.type_name }}</td>
