--- a/app/templates/manage_affiliate_role.html
+++ b/app/templates/manage_affiliate_role.html
@@ -13,7 +13,7 @@
 		<table id="manage_affiliate_role_table" class="table table-striped table-hover">
 			<tr>
 				<th class="col-md-2 admin-table">Affiliate</th>
-				{{ form.qc_access.label}}
+				<th class="col-md-2 admin-table">{{ form.title.label}}</th>
 				<th class="col-md-1 admin-table">{{ form.qc_access.label}}</th>
 				<th class="col-md-1 admin-table">{{ form.inv_access.label}}</th>
 				<th class="col-md-1 admin-table">{{ form.qc_admin.label}}</th>
@@ -21,7 +21,8 @@
 				<th class="col-md-1 admin-table table-bordered">{{ form.super_admin.label}}</th>
 			</tr>
 			<tr>
-				<td class="col-md-2 admin-table">{{ affiliate.users.username }}</td>
+				<td class="col-md-2 admin-table"><a href="{{ url_for('user', username=affiliate.users.username) }}">{{ affiliate.users.firstname }} {{ affiliate.users.lastname }} ({{ affiliate.users.username }})</a></td>
+				<th class="col-md-2 admin-table">{{ form.title (class_="form-control") }}</th>
 				<td class="admin-table form-group">{{form.qc_access(class_="single_check")}}</td>
 				<td class="admin-table form-group">{{form.inv_access(class_="single_check")}}</td>
 				<td class="admin-table form-group">{{form.qc_admin(class_="single_check double_check")}}</td>
