--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -9,27 +9,40 @@
 <div class="container">
 	
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-12">
 			<h4>Manage Affiliates</h4>
 			<table class="table table-striped table-hover">
 			{% if affiliates %}
+				<tr class="text-center">
+					<th>Full name (username)</th>
+					<th>Title</th>
+					<th>Action</th>
+					<th></th>
+				</tr>
 					{% for affiliate in affiliates %}
 				<tr>
-					<td class="col-md-3 admin-table"><a href="{{ url_for('user', username=affiliate.users.username) }}">{{ affiliate.users.username}}</a></td>
+					<td class="col-md-3 admin-table"><a href="{{ url_for('user', username=affiliate.users.username) }}">{{ affiliate.users.firstname}} {{ affiliate.users.lastname}} ({{ affiliate.users.username}})</a></td>
+					<td class="col-md-3 admin-table">{{ affiliate.title}}</a></td>
 					<td class="admin-table"><a href="{{ url_for('manage_affiliate', user_id=affiliate.user_id, comp_id=affiliate.company_id) }}" >Edit Role</a></td>
-					<td class="admin-table"><a href="{{ url_for('delete_affiliate', user_id=affiliate.user_id, comp_id=affiliate.company_id) }}">Delete</a></td>
+					<td class="admin-table"><a href="{{ url_for('delete_affiliate', user_id=affiliate.user_id, comp_id=affiliate.company_id) }}">Remove</a></td>
 				</tr>
 					{% endfor %}
 				{% endif %}
 			</table>
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-12">
 		{% if pending_affiliates %}
 			<h4>Pending affiliates</h4>
 			<table class="table table-striped table-hover">
+				<tr>
+					<th>Full name (username)</th>
+					<th>Action</th>
+					<th></th>
+				</tr>
 				{% for pending_affiliate in pending_affiliates %}
 				<tr>
 					<td class="col-md-4 admin-table"><a href="{{ url_for('user', username=pending_affiliate.users.username) }}">{{ pending_affiliate.users.username}}</a></td>
+					<td class="col-md-4 admin-table"><a href="{{ url_for('user', username=pending_affiliate.users.username) }}">{{ pending_affiliate.users.firstname}} {{ pending_affiliate.users.lastname}} ({{ pending_affiliate.users.username}})</a></td>
 					<td class="col-md-1 admin-table"><a href="{{ url_for('accept_affiliate', user_id=pending_affiliate.user_id, comp_id=pending_affiliate.company_id) }}">Accept</a></td>
 					<td class="col-md-1 admin-table"><a href="{{ url_for('delete_affiliate', user_id=pending_affiliate.user_id, comp_id=pending_affiliate.company_id) }}">Delete</a></td>
 				</tr>
