--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,14 +19,14 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="{{ url_for('index')}}">labApp</a>
+				<a class="navbar-brand" href="{{ url_for('index')}}"><span><img src="/static/logo.jpg" alt="labApp logo" style="width: 22px; height: 22px;"></span><span> labApp</span></a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li><a href="{{ url_for('explore')}}">Explore</a></li>
 					<li><a href="{{ url_for('calculators')}}">Calculators</a></li>
 					<li><a href="{{ url_for('quality_control_sample')}}">Quality Control</a></li>
-					<li><a href="{{ url_for('document_control_sample') }}">Document Control</a></li>
+					<!--li><a href="{{ url_for('document_control_sample') }}">Document Control</a></li-->
 					<li><a href="{{ url_for('inventory_management_sample')}}">Inventory</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
@@ -34,7 +34,7 @@
 					<li><a href="{{ url_for('login') }}">Login</a></li>
 					{% else %}
 					<li><a href="{{ url_for('index')}}">Home</a></li>
-					<li><a href="{{ url_for('user', username=current_user.username) }}">{{ current_user.username }}</a></li>
+					<li><a href="{{ url_for('user', username=current_user.username) }}">{% if current_user.profile_pic %}<span><img src="{{ current_user.profile_pic }}" alt="user profile pic" style="width: 22px; height: 22px;"></span>{% else %}<span><img src="{{ current_user.avatar(256) }}" alt="user avatar" style="width: 22px; height: 22px;"></span>{% endif %}<span> {{ current_user.username }}</span></a></li>
 					<li><a href="{{ url_for('logout') }}">Logout</a></li>
 					{% endif %}
 				</ul>
@@ -67,7 +67,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.quicksearch/2.4.0/jquery.quicksearch.js"></script>
-	<link rel="shortcut icon" href="/static/underconstruction.gif">
+	<link rel="shortcut icon" href="/static/logo.jpg">
 {% endblock %}
 
 {% block scripts %}
