--- a/app/templates/company_base.html
+++ b/app/templates/company_base.html
@@ -19,12 +19,12 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="{{ url_for('index')}}">labApp</a>
+				<a class="navbar-brand" href="{{ url_for('index')}}"><span><img src="/static/logo.jpg" alt="labApp logo" style="width: 22px; height: 22px;"></span><span> labApp</span></a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li><a href="{{ url_for('quality_control', company_name=company.company_name)}}">Quality Control</a></li>
-					<li><a href="{{ url_for('document_control', username=current_user.username) }}">Document Control</a></li>
+					<!--li><a href="{{ url_for('document_control', username=current_user.username) }}">Document Control</a></li-->
 					<li><a href="{{ url_for('inventory_management', company_name=company.company_name)}}">Inventory Management</a></li>
 					{% if is_super_admin %}
 					<li><a href="{{ url_for('admin', company_name=company.company_name)}}">Admin</a></li>
@@ -38,7 +38,7 @@
 					<li><a href="{{ url_for('login') }}">Login</a></li>
 					{% else %}
 					<li><a href="{{ url_for('index')}}">Home</a></li>
-					<li><a href="{{ url_for('user', username=current_user.username) }}">{{ current_user.username }}</a></li>
+					<li><a href="{{ url_for('user', username=current_user.username) }}">{% if current_user.profile_pic %}<span><img src="{{ current_user.profile_pic }}" alt="user profile pic" style="width: 22px; height: 22px;"></span>{% else %}<span><img src="{{ current_user.avatar(256) }}" alt="user avatar" style="width: 22px; height: 22px;"></span>{% endif %}<span> {{ current_user.username }}</span></a></li>
 					<li><a href="{{ url_for('logout') }}">Logout</a></li>
 					{% endif %}
 				</ul>
@@ -73,7 +73,7 @@
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.14.3/xlsx.full.min.js"></script>
 	<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script-->
-	<link rel="shortcut icon" href="/static/underconstruction.gif">
+	<link rel="shortcut icon" href="/static/logo.jpg">
 {% endblock %}
 
 {% block scripts %}
