--- a/app/templates/document_control_sample.html
+++ b/app/templates/document_control_sample.html
@@ -2,12 +2,5 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    {% if form %}
-    {{ wtf.quick_form(form) }}
-    <br>
-    {% endif %}
-	<ul class="nav nav-pills nav-stacked">
-		<li><a href="documentation_page/sop/quality_department_sops.html">Quality Department</a></li>
-		<li><a href="#">Biochemistry</a></li>
-	</ul>
+    <p><img src="/static/underconstruction.gif" alt="Page is under construction"></p>
 {% endblock %}
