--- a/app/templates/quality_control_sample.html
+++ b/app/templates/quality_control_sample.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
-<h2>Hi</h2>
+{% block app_content %}
 <span>Please login and create a company or affiliate yourself to one in order to access this page</span>
 {% endblock %}
