--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,20 +4,26 @@
 {% block app_content %}
     <table class="table table-hover">
         <tr>
+			{% if user.profile_pic %}
+			<td width="256px"><img src="{{ user.profile_pic }}" width="256px"></td>
+			{% else %}
             <td width="256px"><img src="{{ user.avatar(256) }}"></td>
+			{% endif %}
             <td>
                 <h1>User: {{ user.username }}</h1>
-                {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-                {% if user.last_seen %}<p>Last seen on: {{ moment(user.last_seen).format('LLLL') }}</p>{% endif %}
-                <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
+				<h3>{{ user.firstname }} {{ user.lastname }}</h3>
 				{% if my_affiliates %}
-				Affiliated to:
+				Titles:
 				<ul>
 				{% for affiliate in my_affiliates %}
-				<li><a href="{{ url_for('company', company_name=affiliate.company.company_name) }}"  target="_blank">{{ affiliate.company.company_name}}</a></li>
+				<li><span>{{ affiliate.title }}</span> at <a href="{{ url_for('company', company_name=affiliate.company.company_name) }}"  target="_blank">{{ affiliate.company.company_name}}</a></li>
 				{% endfor %}
 				{% endif %}
 				</ul>
+                {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+                {% if user.last_seen %}<p>Last seen on: {{ moment(user.last_seen).format('LLLL') }}</p>{% endif %}
+                <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
+				
                 {% if user == current_user %}
                 <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
 				<p><a href="#" id="register_company">Register a company?</a></p>
