--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -16,14 +16,23 @@
 				Titles:
 				<ul>
 				{% for affiliate in my_affiliates %}
+				{% if affiliate.title != None %}
 				<li><span>{{ affiliate.title }}</span> at <a href="{{ url_for('company', company_name=affiliate.company.company_name) }}"  target="_blank">{{ affiliate.company.company_name}}</a></li>
+				{% endif %}
 				{% endfor %}
 				{% endif %}
 				</ul>
                 {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
                 {% if user.last_seen %}<p>Last seen on: {{ moment(user.last_seen).format('LLLL') }}</p>{% endif %}
                 <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
-				
+				{% if my_affiliates %}
+				Affiliates:
+				<ul>
+				{% for affiliate in my_affiliates %}
+				<li><a href="{{ url_for('company', company_name=affiliate.company.company_name) }}"  target="_blank">{{ affiliate.company.company_name}}</a></li>
+				{% endfor %}
+				{% endif %}
+				</ul>
                 {% if user == current_user %}
                 <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
 				<p><a href="#" id="register_company">Register a company?</a></p>
