--- a/app/templates/company_base.html
+++ b/app/templates/company_base.html
@@ -1,11 +1,9 @@
 {% extends 'bootstrap/base.html' %}
 
 {% block title %}
-	{% if title %}
-	labApp - {{company.company_name }}-{{ title }}
-	{% else %}
-	labApp
-	{% endif %}
+	
+	labApp - {{company.company_name }} {% if title %} - {{ title }} {% endif %}
+	
 {% endblock %}
 
 {% block navbar %}
